--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ if (position != msg.length) {
 window.setTimeout(function() { scroll(position); }, 50);
 }
 else {
-window.setTimeout(function() { scroll(0); }, 50000);
+window.setTimeout(function() { scroll(0); }, 5000000);
 }
 }
 scroll(0);
